# karpathy-autosearch-upworthy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  program.md  pyproject.toml  strategy.md
.github/workflows/: ci.yml  daily_benchmark.yml  daily_search.yml
prompt_templates/: pairwise_judge.md
results/: analysis_summary.md  experiment_log.md  extended_analysis.md  leaderboard.md  metrics.csv  results.tsv
scripts/: run_agent.sh
src/upworthy_autosearch/: benchmark.py  data.py  model_api.py  prepare_dataset.py  prompts.py  search.py  utils.py
tests/: test_analysis_artifacts.py  test_benchmark.py  test_data.py  test_model_api.py  test_results_utils.py  test_run_agent.py  test_search.py  test_smoke.py
